tdf#128752 DOCX: fix partial direct paragraph spacing in tables

When direct formatting of a table paragraph set only top margin,
but not the bottom margin, also there was no paragraph style setting
for the bottom margin, the paragraph was imported using docDefault
bottom spacing instead of the table style bottom spacing.

Change-Id: Ib7f5f80dd2485a0fd4ab8e0645b7d730a7ec3c5c
Reviewed-on: https://gerrit.libreoffice.org/82771
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>